add legacy address converter
