# packages/mainnet-cash/controllers/UtilController.js
@@ -1,6 +1,6 @@
 /**
  * The UtilController file is a very simple one, which does not need to be changed manually,
- * unless there's a case where business logic routes the request to an entity which is not
+ * unless there's a case where business logic reoutes the request to an entity which is not
  * the service.
  * The heavy lifting of the Controller item is done in Request.js - that is where request
  * parameters are extracted and sent to the service, and where response is handled.
@@ -12,7 +12,12 @@ const convert = async (request, response) => {
   await Controller.handleRequest(request, response, service.convert);
 };
 
+const convertLegacy = async (request, response) => {
+  await Controller.handleRequest(request, response, service.convertLegacy);
+};
+
 
 module.exports = {
   convert,
+  convertLegacy,
 };
